{
    "name": "CalibroomInputActions",
    "maps": [
        {
            "name": "Menu",
            "id": "9abc1b2f-3667-4d2e-bd33-850370ee2d6a",
            "actions": [
                {
                    "name": "ExitGame",
                    "type": "Button",
                    "id": "fe83f3ba-d781-462d-a97d-320340f9c858",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CompletePuzzle",
                    "type": "Button",
                    "id": "6d309663-7c53-4855-8038-afaeea7b1f4b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ToggleDataCollection",
                    "type": "Button",
                    "id": "cfd13600-9f06-41d3-a92e-5b0e468096b0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3a3f0b1e-c770-4a8d-b08d-a88685a21231",
                    "path": "<Keyboard>/escape",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ExitGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bfb7bca1-3573-406f-9baf-ad66fd946f44",
                    "path": "<Keyboard>/f",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "CompletePuzzle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "74a78dc5-7d42-4fa4-8ada-197a2d5e78aa",
                    "path": "<Keyboard>/d",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleDataCollection",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}